Fixed trustedby section alignment

--- a/src/pages/Framework/style.css
+++ b/src/pages/Framework/style.css
@@ -586,7 +586,7 @@
 }
 
 .patternSectionWrapper{
-  padding: 80px 0px !important;
+  padding: 80px 0px;
   background: url('../../assets/images/rectangle-19.png') repeat;
 }
 
@@ -644,18 +644,20 @@
       }
     }
 
-    .trustedBy {
-      padding: 2% 0;
+    .trustedByContainer {
+      padding-top: 80px;
+      .trustedBy {
+        padding: 2% 0;
 
-      li {
-        padding-bottom: 25px;
+        li {
+          padding-bottom: 25px;
 
-        img {
-          max-height: 41px;
+          img {
+            max-height: 41px;
+          }
         }
       }
     }
-
     &.footerPrevPad{
       padding-bottom: 0px;
     }
